Tut/7/src1/main/bkit/parser/BKIT.g4
grammar BKIT;

@lexer::header {
from lexererr import *
}

@lexer::members {
def emit(self):
    tk = self.type
    result = super().emit()
    return result;
}

options {
	language = Python3;
}
program: vardecl+ EOF;

vardecl: mptype ids ';';

mptype: INTTYPE | FLOATTYPE;

ids: ID (',' ID)*;

INTTYPE: 'int';

FLOATTYPE: 'float';

ID: [a-z]+;
